--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
+<html data-theme="black">
+  <head>
+    <link rel="icon" type="image/png" href="./src/assets/web-development.png" />
+  </head>
+</html>
 <html lang="en">
-  <html data-theme="black"></html>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/assets/web-development.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vijay Dabhi</title>
     <link rel="stylesheet" href="./src/index.css" />
-    <link rel="stylesheet" href="https://kit.fontawesome.com/eda2291dfd.css" />
   </head>
   <body class="bg-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://kit.fontawesome.com/eda2291dfd.js"></script>
   </body>
 </html>
