--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html data-theme="black">
   <head>
-    <link rel="icon" type="image/png" href="./src/assets/web-development.png" />
+    <link rel="icon" type="image/png" href="./src/assets/Logo.png" />
   </head>
 </html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/web-development.png" />
+    <link rel="icon" type="image/png" href="./src/assets/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vijay Dabhi</title>
     <link rel="stylesheet" href="./src/index.css" />
